# DesktopManager

./: CMakeLists.txt  README.md
include/: DateFileCleaner.h  DateFileSorter.h  ExtensionFileCleaner.h  FileCleaner.h  FileSorter.h  Operations.h  SizeFileSorter.h
src/: main.cpp
src/operations/: DateFileCleaner.cpp  DateFileSorter.cpp  ExtensionFileCleaner.cpp  FileCleaner.cpp  FileSorter.cpp  Operations.cpp  SizeFileSorter.cpp
